--- a/banking-app/src/app/payees/payees-search/payees-search.component.html
+++ b/banking-app/src/app/payees/payees-search/payees-search.component.html
@@ -17,6 +17,7 @@
 </div>
 <div class="row mt-1">
   <div class="col">
-    <button class="btn btn-outline-success" (click)="handleSearch()">Search!</button>
+    <button class="btn btn-primary" (click)="handleSearch('dao')">Search!</button> &nbsp;
+    <button class="btn btn-info" (click)="handleSearch('resolver')">Search!</button>
   </div>
 </div>
