--- a/banking-app/src/app/people/people-list/people-list.component.html
+++ b/banking-app/src/app/people/people-list/people-list.component.html
@@ -1,5 +1,5 @@
-<!--<table class="table" *ngIf="payees?.length > 0; else noneFound">-->
-<div [ngSwitch]="payees && payees?.length">
+<!--<table class="table" *ngIf="people?.length > 0; else noneFound">-->
+<div [ngSwitch]="people && people?.length">
   <section class="card" *ngSwitchCase="0">
     <div class="card-header bg-danger text-center text-white">
       <h2>No records found</h2></div>
@@ -9,20 +9,22 @@
   <table class="table" *ngSwitchDefault>
     <thead>
     <tr class="clickable">
-      <th (click)="handleHeaderClick('payeeName')" [ngClass]="getSortIndicator('payeeName')">Name</th>
+      <th (click)="handleHeaderClick('firstName')" [ngClass]="getSortIndicator('firstName')">Name</th>
+      <th (click)="handleHeaderClick('lastName')" [ngClass]="getSortIndicator('lastName')">Name</th>
       <th (click)="handleHeaderClick('address.city')" [ngClass]="getSortIndicator('address.city')">City</th>
       <th (click)="handleHeaderClick('address.state')" [ngClass]="getSortIndicator('address.state')">State</th>
     </tr>
     </thead>
     <tbody>
-    <tr (click)="handleClick(payee)"
-        *ngFor="let payee of payees; index as i"
+    <tr (click)="handleClick(person)"
+        *ngFor="let person of people; index as i"
         [ngClass]="{'table-info': i % 2 === 0, 'table-warning': i % 2 !== 0}">
 
-      <td class="clickable"><a [routerLink]="['../detail', payee.id]">{{ payee.payeeName }}</a></td>
+      <td class="clickable">{{ person.firstName }}</td>
+      <td class="clickable">{{ person.lastName }}</td>
 
-      <td>{{ payee.address?.city }}</td>
-      <td>{{ payee.address?.state }}</td>
+      <td>{{ person.address?.city }}</td>
+      <td>{{ person.address?.state }}</td>
     </tr>
     </tbody>
   </table>
